samples/_failures_safe/1761404647_8477c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8aac7e10.c: In function ‘main’:
./samples/SAFE/__tmp_8aac7e10.c:165: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_8aac7e10.c:164:30: note: to match this ‘{’
  164 |     uint8_t sample_data1[] = {0x48, 0x65, 0x6C, 0x6C, 0x6F
      |                              ^
./samples/SAFE/__tmp_8aac7e10.c:164:5: error: expected declaration or statement at end of input
  164 |     uint8_t sample_data1[] = {0x48, 0x65, 0x6C, 0x6C, 0x6F
      |     ^~~~~~~
